--- a/code/Covid_19.ipynb
+++ b/code/Covid_19.ipynb
@@ -2492,7 +2492,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Mapa do número de confirmados no Mundo"
+        "# Mapa do número de mortos no Mundo"
       ]
     },
     {
